# underactuated

./: .gitignore  CMakeLists.txt  README.md
DynamixelBridge/: platformio.ini
DynamixelBridge/src/: main.cpp
EKF/: EKF.py  ekf-noisy.py
ESC/: controller v4.brd  controller_v3.sch
Pendulum/: Pendulum.sln
Pendulum/Pendulum/: Pendulum.vcxproj  main.cpp
ROS/underactuated_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ROS/underactuated_ws/src/: CMakeLists.txt
ROS/underactuated_ws/src/WheeledInvertedPendulum/: eom_simulation.py
ROS/underactuated_ws/src/pendulum/: CMakeLists.txt  package.xml
ROS/underactuated_ws/src/pendulum/launch/: gazeboSim.launch
ROS/underactuated_ws/src/pendulum/nodes/arduino/Controller/: Controller.ino
ROS/underactuated_ws/src/pendulum/nodes/arduino/HardwareInterface/: HardwareInterface.cpp
ROS/underactuated_ws/src/pendulum/nodes/controller/: controller.cpp
ROS/underactuated_ws/src/pendulum/nodes/sim/: pendulum_viz.py  simulator.cpp  simulator_rk4.cpp
ROS/underactuated_ws/src/pendulum/rviz/: urdf.rviz
ROS/underactuated_ws/src/pendulum/src/: controller.cpp  gazeboSim.cpp
ROS/underactuated_ws/src/pendulum/urdf/: pendulum.urdf
RobotHAL/: RobotHAL.h  RobotHAL.sln  RobotHAL.vcxproj  RobotHAL.vcxproj.filters  Serial.h  SerialRobotBackend.cpp  SerialRobotBackend.h  SerialWin32.h
cmake/modules/: FindD3D12.cmake
core/: serial.cpp  serial.h
include/avr/: L298.h  cstdint  pin.h  register.h  staticVector.h
libs/implot/: implot_demo.cpp
math/: linear.h  matrix.h  noise.h  vector.h
ml/nn/: FullyConnectedNN.h  layer.h
models/Segway/firmware/: platformio.ini
models/Segway/simulation/: CMakeLists.txt
models/Segway/simulation/src/: cmdLineParser.cpp  main.cpp  orbits.h
models/Segway/src/: main.cpp
models/acrobot/: CMakeLists.txt
models/acrobot/src/: app.h  main.cpp
models/hopperCube/firmware/HopperCube/: platformio.ini
models/hopperCube/firmware/HopperCube/include/: BLDCDrivers.h  cmath  register.h
models/hopperCube/firmware/HopperCube/src/: main.cpp
models/liquid1/: CMakeLists.txt
models/liquid1/src/: Agent.cpp  Agent.h  app.cpp  cmdLineParser.h  main.cpp  plot.h  policy.cpp  policy.h  track.cpp  track.h
models/pendulum/: CMakeLists.txt
models/pendulum/src/: main.cpp
models/rattrap/firmware/rattrap/: platformio.ini
models/rattrap/firmware/rattrap/src/: main.cpp
