<?xml version="1.0"?>
<package format="2">
  <name>pendulum</name>
  <version>0.0.1</version>
  <description>The pendulum package</description>

  <maintainer email="cjtech90@gmail.com">technik</maintainer>
  <maintainer email="ojferro@gmail.com">ojferro</maintainer>

  <license>MIT</license>
  <url type="website">https://github.com/technik/underactuated</url>


  <author email="cjtech90@gmail.com">technik</author>
  <author email="ojferro@gmail.com">ojferro</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>


  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
  </export>
</package>
